Create a schema2beans ant task. Add checkUpToDate feature, which only does generation if the source files are newer than the generated files. For "pure java beans" added another constructor: one for all required properties.

--- a/schema2beans/src/org/netbeans/modules/schema2beans/Bundle.properties
+++ b/schema2beans/src/org/netbeans/modules/schema2beans/Bundle.properties
@@ -48,6 +48,7 @@ RenamedProperty_msg=Renamed property from \"{0}\" to \"{1}\", due to duplicate n
 MSG_UsingMdd=Using the mdd information from {0}
 MSG_CreatedDirectory=Created directory {0}
 MSG_GenerationSummary=The root element is ''{0}'' and it''s class is ''{1}''.
+MSG_SkippingGenerationDueToTime=Skipping generation due to generated files are newer than source files.
 
 # Class BeanProp:
 ParentNodeCantBeNull_msg=Parent node should not be null.
