--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -274,6 +274,7 @@ config.fixedmodules.javadoc=openide, \
         openide/execution, \
         openide/io, \
         openide/deprecated, \
+        openide/loaders, \
         ant, \
         core/javahelp, \
         core/naming, \
