--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -422,7 +422,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module monitor..."/>
     <ant dir="../monitor" target="netbeans"/>
   </target>
-  <target name="all-mdr" depends="all-openide,all-openidex,all-openidex/looks,all-core/naming">
+  <target name="all-mdr" depends="all-openide,all-openide/deprecated,all-openide/loaders,all-openidex,all-openidex/looks,all-core/naming">
     <echo message="Building module mdr..."/>
     <ant dir="../mdr" target="netbeans"/>
   </target>
