--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -34,6 +34,7 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
         <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+        <pathelement location="${nbroot}/openide/loaders/netbeans/lib/openide-loaders.jar"/>
         <pathelement location="${nbroot}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar" />
         <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar" />
         <pathelement location="${nbroot}/openide/io/netbeans/modules/autoload/openide-io.jar" />
