--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -19,6 +19,15 @@ ToDo:
 -->
 
 <project name="nbbuild" default="all" basedir=".">
+
+  <!-- First things first: read the user's and/or -->
+  <!-- the site's build properties files.         -->
+  <property file="user.build.properties"/>
+  <property file="site.build.properties"/>
+
+  <!-- Now read the standard properties file. -->
+  <property file="build.properties"/>
+
   <property name="build.sysclasspath" value="ignore"/>
 
   <!-- To make people happy who want to do `ant clean all': -->
@@ -72,11 +81,7 @@ ToDo:
   </target>
 
   <target name="init-module-list" depends="bootstrap,setup-jdkhome-4">
-    <!-- Read the user property file at first -->
-    <property file="user.build.properties"/>
-
-    <!-- Read standard property file -->
-    <property file="build.properties"/>
+    <!-- Already read the user, site and standard properties files. -->
 
     <!-- Define modules. -->
     <!-- The following is not permitted by Ant: -->
