--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -25,19 +25,21 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nbm_alias" value="nb_ide"/>
   <property name="webbeans_root" location="src/org/netbeans/modules/web/dd/model"/>
 
-  <taskdef name="schema2beans" classname="org.netbeans.modules.s2banttask.Schema2BeansAntTask">
-	<classpath>
-	  <pathelement path="${nb_root}/schema2beans/netbeans/modules/autoload/schema2beans.jar" />
-	  <pathelement path="${nb_root}/schema2beans/netbeans/modules/autoload/schema2beansdev.jar" />
-	  <pathelement path="${nb_root}/schema2beans/anttask/s2banttask.jar"/>
-	</classpath>
-  </taskdef>
+  <target name="s2binit">
+	<taskdef name="schema2beans" classname="org.netbeans.modules.s2banttask.Schema2BeansAntTask">
+	  <classpath>
+		<pathelement path="${nb_root}/schema2beans/netbeans/modules/autoload/schema2beans.jar" />
+		<pathelement path="${nb_root}/schema2beans/netbeans/modules/autoload/schema2beansdev.jar" />
+		<pathelement path="${nb_root}/schema2beans/anttask/s2banttask.jar"/>
+	  </classpath>
+	</taskdef>
+  </target>
 
   <target name="init">
     <ant dir="../external" target="unscramble"/>
   </target>
 
-   <target name="dd2beansgen">
+   <target name="dd2beansgen" depends="s2binit">
      <echo message="generating code generation input file information" />
 	<schema2beans schema="${nb_root}/web/core/src/org/netbeans/modules/web/core/resources/web-app_2_3.dtd"
 	  mddFile="src/org/netbeans/modules/web/dd/webapp/webapp.mdd"
