Fixes for related issues:
20736 - Replace functionality of ChoicePropertyEditor (Integer editor hints)
23077 - int editor returns poor message on illegal values
5278  - Int property editor should trim whitespace
32619 - Boolean property editor is not internationalizable
31879 - NonGui should split off registration of property editors so unit tests can run standalone

Added replacement primitive boolean and int editors - Boolean and Integer
editors will transparently use all hints that can be given to the new
editors.  Added ExPropertyEditorSupport base class which helps provide
better validation of hinting at module-design-time.

Updated apichanges and explorer docs to reflect new hints.

Deleted miscellaneous JavaDoc comments copied from java.beans package
into Integer and Boolean property editors - surely it's there accidentally,
and if the JDK javadoc changes, the generated javadoc would get out of date.

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -300,3 +300,13 @@ ACSD_StringArrayCustomEditor=N/A
 TRUE=true
 FALSE=false
 NULL=null
+
+#Int/IntegerEditor
+#Illegal argument exception on bad string input
+EXC_ILLEGAL_VALUE_TEXT=Non integer input value: 
+#Illegal argument exception on bad string input to a keyed editor
+#preceding the input string
+EXC_ILLEGAL_STRING_TEXT_FIRST=Illegal string key "
+#Illegal argument exception on bad string input to a keyed editor
+#following the input string, preceding the list of keys
+EXC_ILLEGAL_STRING_TEXT_SECOND=" - valid values are: "
