--- a/db/test/build.xml
+++ b/db/test/build.xml
@@ -34,7 +34,9 @@
 	<property name="xtest.userdata.propertyfile" location="${nbextra.home}/qa/db/data/database.properties" />
         
    	<target name="init" depends="prepare-compile-classpath,prepare-codetest-classpath">
-                <property name="xtest.extra.jars.path" location="${nbextra.home}/jemmy;${nbextra.home}/jellytools;${netbeans.home}/modules;${netbeans.home}/lib;${netbeans.home}/lib/ext"/>
+                <property name="jemmy.home" location="../../jemmy/builds"/>
+                <property name="jelly.home" location="../../jellytools/builds"/>
+                <property name="xtest.extra.jars.path" location="${jemmy.home};${jelly.home};${netbeans.home}/modules;${netbeans.home}/lib;${netbeans.home}/lib/ext"/>
 		
                 <property name="xtest.extra.jars.ide" value="jemmy.jar;jelly-nb.jar;jelly2-nb.jar"/>
 	    	<property name="compile.srcdir" value="qa-functional/src" />
@@ -245,7 +247,9 @@
                 -->
                 
                 <!-- List of directories where jars will be searched. -->
-                <property name="xtest.extra.jars.path" location="${nbextra.home}/jemmy;${nbextra.home}/jellytools;${netbeans.home}/modules;${netbeans.home}/lib;${netbeans.home}/lib/ext"/>
+                <property name="jemmy.home" location="../../jemmy/builds"/>
+                <property name="jelly.home" location="../../jellytools/builds"/>
+                <property name="xtest.extra.jars.path" location="${jemmy.home};${jelly.home};${netbeans.home}/modules;${netbeans.home}/lib;${netbeans.home}/lib/ext"/>
                 
                 <!--
                 	This jars is used for compilation, execution codetests and also for
