--- a/form/test/build.xml
+++ b/form/test/build.xml
@@ -64,7 +64,9 @@ Microsystems, Inc. All Rights Reserved.
           -->
     
         <!-- List of directories where jars will be searched. -->
-        <property name="xtest.extra.jars.path" location="${ffj.repository}/jellytools;${ffj.repository}/jemmy;${netbeans.home}/modules" />
+        <property name="jemmy.home" location="../../jemmy/builds"/>
+        <property name="jelly.home" location="../../jellytools/builds"/>
+        <property name="xtest.extra.jars.path" location="${jemmy.home};${jelly.home};${netbeans.home}/modules" />
     
         <!-- This jars is used for compilation, execution codetests and also for
              execution ide tests (it means this classpath will be mounted in repository).
