--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -44,6 +44,9 @@ Microsystems, Inc. All Rights Reserved.
     <!-- Says how to create classpath for compilation and for execution code tests by default.
          Can have values src, jar, ide -->
     <property name="xtest.source.location" value="ide"/>
+
+    <property name="jemmy.home" location="${nb.repository}/jemmy/builds"/>
+    <property name="jelly.home" location="${nb.repository}/jellytools/builds"/>
  
     <!-- ============ -->
     <!-- Main targets -->
@@ -159,9 +162,9 @@ Microsystems, Inc. All Rights Reserved.
         -->
         <pathelement location="${netbeans.home}/modules/editor.jar"/>                      
         <pathelement location="${netbeans.home}/modules/ext/nb-editor.jar"/>
-        <pathelement location="${nbextra.repository}/jemmy/jemmy.jar"/>                    
-        <pathelement location="${nbextra.repository}/jellytools/jelly-nb.jar"/>
-        <pathelement location="${nbextra.repository}/jellytools/jelly2-nb.jar"/>
+        <pathelement location="${jemmy.home}/jemmy.jar"/>                    
+        <pathelement location="${jelly.home}/jelly-nb.jar"/>
+        <pathelement location="${jelly.home}/jelly2-nb.jar"/>
         <pathelement location="${xtest.home}/lib/junit.jar"/>                    
         <pathelement location="${xtest.home}/lib/nbjunit.jar"/>                    
         <!--pathelement location="${xtest.home}/lib/xtest.jar"/-->                    
