IN=12828 - new jemmy.jar, jelly-nb.jar and jelly2-nb.jar locations and related changes

--- a/testtools/src/org/netbeans/modules/testtools/templates/unit__build-.xml.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/unit__build-.xml.template
@@ -25,8 +25,8 @@ Microsystems, Inc. All Rights Reserved.
 	     or <module>/netbeans isn't available. 
           -->            
          
-        <property name="jemmy.home" location="../../../nbextra/jemmy"/>
-        <property name="jelly.home" location="../../../nbextra/jellytools"/>
+        <property name="jemmy.home" location="../../../nb_all/jemmy/builds"/>
+        <property name="jelly.home" location="../../../nb_all/jellytools/builds"/>
 		 
         <!-- List of directories where jars will be searched. -->
         <property name="xtest.extra.jars.path" value=""/>
