--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -133,3 +133,5 @@ HINT_breakpoint_line_number=The line number this breakpoint is set on, if applic
 
 CTL_CompilationNotSupported=The web server does not support compiling JSPs from the IDE, \
 therefore debugger will not stop on breakpoints in JSPs.
+
+HINT_DISABLED_PINK_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=Disabled pink JSP breakpoint
