#31072: improving core/term arch description, and also including it in daily Javadoc so that it can be conveniently referred to from other places.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -290,7 +290,8 @@ config.fixedmodules.javadoc=openide, \
         xml/api, \
 	tasklist/api
 config.modules.javadoc=jemmy, \
-        jellytools
+        jellytools, \
+	core/term
 
 # configuration for signature test builds
 config.fixedmodules.sigtest=${config.fixedmodules.stable}
