--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -1046,4 +1046,12 @@ the ${netbeans.dest}/bin/ directory.
     <taskdef name="printcvsmodules" classname="org.netbeans.nbbuild.PrintCvsModules" classpath="nbantext.jar"/>
     <printcvsmodules modules="${fixedmodules},${modules}" targetprefix="all-" />
   </target>
+  
+  <target name="commitValidation" description="Runs tests to validate IDE before commit.">
+    <property name="xtest.home" location="../xtest"/>
+    <ant dir="${xtest.home}/instance" target="runtests">
+        <property name="xtest.config" value="commit-validation-nb"/>
+    </ant>
+  </target>
+  
 </project>
