IN=12974 J2EE Editor library module created

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -107,7 +107,8 @@ config.modules.slim=${config.modules.superslim}, \
 
 local.config.libs=libs/xalan, \
         libs/jaxp, \
-        libs/xerces
+        libs/xerces, \
+        libs/j2eeeditor
 
 local.config.xml=xml/api, \
         xml/tax, \
