Fix of MRE - HINT_DISABLED_PINK_JSP_BREAKPOINT

--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -135,3 +135,5 @@ CTL_CompilationNotSupported=The web server does not support compiling JSPs from 
 therefore debugger will not stop on breakpoints in JSPs.
 
 HINT_DISABLED_PINK_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=Disabled pink JSP breakpoint
+
+HINT_DISABLED_PINK_JSP_BREAKPOINT=Disabled pink JSP breakpoint
