Update user view, move userview and design documents to www accessible folder.

--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -292,9 +292,8 @@ symbols and copy jar file(s)">
       </classpath>
     </javadoc>
     <copy todir="J2EEServerAPIs">
-            <fileset dir="api/doc/">
+            <fileset dir="www/jsr88/">
               <include name="*.html"/>
-              <exclude name="overview.html"/> 
             </fileset>
     </copy>
     <copy todir="J2EEServerAPIs">
