Fixed bug #28199 Getting database schema information doesn't run in AWT thread anymore. DatabaseMetaData calls run in RequestProcessor and until the results are returned wait node is dispalyed.

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -851,3 +851,6 @@ ND_ViewList=List of Views
 ND_View=View
 ND_ForeignKeyList=List of Foreign Keys
 ND_IndexList=List of Indexes
+
+# DatabaseNodeChildren
+WaitNode=Please wait...
